--- a/index.html
+++ b/index.html
@@ -29,8 +29,21 @@
                     </div>
 
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="/loader.lua" target="_blank" class="nav__link">Script</a></li>
                         <li class="nav__item"><a href="https://discord.io/dexhub" target="_blank" class="nav__link">Discord</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
+                        <li class="nav__item"><a href="\game.html" class="nav__link">Game</a></li>
                     </ul>
                 </div>
             </nav>
