--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </span>
 
                 <div class="text logo-text">
-                    <span class="name">Dex</span>
-                    <span class="profession">Web Developer</span>
+                    <span class="name">DeX Games</span>
+                    <span class="profession">Why Study?</span>
                 </div>
             </div>
 
@@ -87,8 +87,8 @@
             <div class="bottom-content">
                 <li class="">
                     <a href="#">
-                        <i class='bx bx-log-out icon' ></i>
-                        <span class="text nav-text">Logout</span>
+                        <i class='bx bx-discord-alt icon' ></i>
+                        <span class="text nav-text">Discord</span>
                     </a>
                 </li>
 
@@ -110,7 +110,7 @@
     </nav>
 
     <section class="home">
-        <div class="text">Dashboard Sidebar</div>
+        <div class="text">Welcome to DeX Games Early Beta!</div>
     </section>
 
     <script>
