--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="bottom-content">
                 <li class="">
                     <a href="#">
-                        <i class='bx bx-discord-alt icon' ></i>
+                        <i class='bx bxl-discord-alt icon' ></i>
                         <span class="text nav-text">Discord</span>
                     </a>
                 </li>
